traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:5: error: not found: value marquer
      marquer()
      ^TraversalByColumn:19: error: not found: value setPosition
    setPosition(getX()+1,0)
    ^