traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() 
{
  while(!posFinale)
  	{
      goNext()
      marquer()
    }
}


def posFinale():Boolean=
{
  return((getMondeHauteur()==(getY()+1))&&(getMondeLargeur()==getX()+1))
}

def goNext()
{
  if (estFaceMur())
  {
    setPosition(getX()+1,0)
  }
}